--- a/package.json
+++ b/package.json
@@ -4,15 +4,15 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-      "test": "echo \"Error: no test specified\" && exit 1",
-      "start" : "node ."
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "node ."
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "dependencies": {
-      "express": "^4.18.1"
+        "cors": "^2.8.5",
+        "express": "^4.18.1"
     },
-    "type" : "module"
-  }
-  
+    "type": "module"
+}
